[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/MALERMEI.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://assets/scenes/QuitPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scripts/DefeatMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/scenes/AudioManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/music/Suspense07.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
extra_spacing_top = -8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=6]
antialiased = false
font_path = "res://assets/fonts/Pixeled.ttf"

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = SubResource( 6 )

[node name="DefeatMenu" type="CanvasLayer"]
script = ExtResource( 4 )
music = ExtResource( 6 )

[node name="AudioManager" parent="." instance=ExtResource( 5 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -109.5
margin_right = 195.0
margin_bottom = 109.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tittle" type="Label" parent="VBoxContainer"]
margin_right = 390.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.835294, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Defeat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToMainMenu" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 390.0
margin_bottom = 98.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "RETURN TO MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 390.0
margin_bottom = 146.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" parent="." instance=ExtResource( 3 )]

[node name="Version" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -35.0
margin_right = 258.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "VERSION: 0.01"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="VBoxContainer/ReturnToMainMenu" to="." method="_on_ReturnToMainMenu_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_Quit_button_up"]
